2006-10-31  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Add a11y relationships for the duration (#364386, Robin Sonefors)

2006-10-30  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Fix dialog spacing (#332561, Christian Persch).

2006-10-25  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-metadata-musicbrainz.c:
	Fix dates with 0s in (#364976, Alex Lancaster).

2006-10-22  Luca Cavalli  <lcavalli@cgs.gnome.org>

	* src/sj-extracting.c: (filepath_parse_pattern):
	Replace spaces with underscores in path_patterns and file_patterns
	when "Strip special characters" is selected (#357111).

2006-10-17  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.desktop.in:
	* data/sound-juicer.desktop.in.in:
	* po/POTFILES.in:
	Rename and add version field for bug-buddy.
		
	* autogen.sh:
	* configure.in:
	* Makefile.am:
	* data/Makefile.am:
	* libjuicer/Makefile.am:
	* src/Makefile.am:
	* tests/Makefile.am:
	Port to automake 1.9.
	
	* .cvsignore:
	* help/sound-juicer/*/.cvsignore:
	* po/.cvsignore:
	Update.

	Thanks to Christian Persch (#357682).

2006-10-17  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-extractor.c:
	Reset the extract speed on every track just in case (#343544).

2006-10-16  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-extractor.c:
	Remove unused variables.

	* src/sj-main.c:
	Remove const, and initialise the authentication manager (#356578).

2006-10-13  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-extractor.c:
	Show error messages when the pipeline doesn't link (thanks
	Tim-Philipp Muller) (#361151)

2006-10-11  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer-32.png:
	* data/sound-juicer-32.xcf:
	* data/Makefile.am:
	Install new 32x32 icon.

2006-10-01  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.16.1.

2006-09-25  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Listen to the strip special characters preference and update the
	label (#345761, thanks Peter)