@@ -1,3 +1,8 @@
+2006-11-02  Ross Burton  <ross@burtonini.com>
+
+	* src/bacon-volume.[ch]:
+	Update for multi-screen and g-i-t (#369490).
+
 2006-10-31  Ross Burton  <ross@burtonini.com>
 
 	* data/sound-juicer.glade:
